--- a/style.css
+++ b/style.css
@@ -878,3 +878,15 @@ footer .social--icons {
       left: 0;
   }
 }
+
+
+.blue {
+  background-color: #648bf0;
+  border-bottom: 6px solid #348bf0;
+}
+
+.red {
+  background-color: #f06c64;
+  border-bottom: 6px solid #ea676b;
+}
+
